--- a/styles/style.css
+++ b/styles/style.css
@@ -6,3 +6,14 @@
     background-color: #15803D;
     color: white;
 }
+
+/* .line-clamp-3 {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;   
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+} */
+#design-modal{
+    max-width: 300px;
+}
